--- a/loopback/frontend/src/components/Doctor/Diagnosis/Symptoms.css
+++ b/loopback/frontend/src/components/Doctor/Diagnosis/Symptoms.css
@@ -2,9 +2,9 @@
     color: white;
 }
 
-.headings{
+.headingss{
     color: white;
-    margin-left: 20px;
+    margin-left: 40px;
     margin-bottom: 10px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
